--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # General App Info
 #
 app:
-  name: 球路 # REQUIRED - Enter your app name
+  name: 球路App # REQUIRED - Enter your app name
   ios_id: 1082206283 # REQUIRED - 10 Digit Numeric App ID (lookup in iTunes Connect)
   android_id: com.lee.cliplay # Optional - Enter Android app id like: com.example.app
 
