--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ app:
 #
 # Marketing
 #
-marketing_header: NBA动图专家 # Optional
-marketing_desc: 超过35位顶级NBA球星的动图库，以动作分类，系统、全面。总计超过3500张动图，并持续增加和更新。同屏流畅显示大量动图，集成自动播放/暂停，极致欣赏体验。独创无级拖放，前后快慢，随心所欲，洞察每帧的动作细节。一键收藏，你的最爱一览无遗。支持离线使用，随时随地，方便球场模仿演练。存储空间不足时自动清除下载内容并允许手动清除，节省空间。
+marketing_header: 篮球动图专家 # Optional
+marketing_desc: 超过37位顶级NBA球星的动图库，以动作分类，系统、全面。总计超过5000张动图，并持续增加和更新。同屏流畅显示大量动图，集成自动播放/暂停，极致欣赏体验。独创无级拖放，前后快慢，随心所欲，洞察每帧的动作细节。一键收藏，你的最爱一览无遗。支持离线使用，随时随地，方便球场模仿演练。存储空间不足时自动清除下载内容并允许手动清除，节省空间。
 
 #
 # Social Links
@@ -78,8 +78,8 @@ download_button_text_color: white; # Optional
 #
 # If you want specific meta info for your <head></head> tags
 #
-title: # Optional - Enter your site title
-description: # Optional - Enter your site description
+title: 球路App官方下载 # Optional - Enter your site title
+description: 球路官方下载页面，iOS和Android版 # Optional - Enter your site description
 
 #
 # Google Analytics
